--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Creating Slider</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -27,7 +27,7 @@
 
     <body>
         <div class="container">
-            <h4 class="mt-2 text-center">Search Image for create slider</h4>
+            <h3 class="mt-2 text-center">Search Images for creating slider</h3>
             <div class="form-inline mt-3 d-flex justify-content-center">
                 <div class="input-group col-md-6 mb-2">
                     <input
@@ -45,13 +45,23 @@
                     Search
                 </button>
             </div>
+            <div class="d-flex justify-content-center">
+                <div
+                    id="spinner"
+                    class="spinner-border text-warning d-none"
+                    role="status"
+                >
+                    <span class="visually-hidden"></span>
+                </div>
+            </div>
             <section class="images">
                 <div
                     class="justify-content-around align-items-center mt-3 gallery-header mb-2"
                 >
-                    <h3 class="head-title text-center">
-                        Select image for create slider
-                    </h3>
+                    <h5 class="head-title text-center">
+                        Select images for creating slider <br />
+                        seleted = <span id="selected"> 0</span>
+                    </h5>
                     <div class="input-group col-md-3 mb-2 mb-md-0">
                         <input
                             class="form-control"
